--- a/index2.html
+++ b/index2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es-AR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,14 +11,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
 
-    <!-- esstilo iconos -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <!-- icono pestaña -->
 
+    <link rel="icon" href="img/filmIcon.ico">
     <title>clase del 12</title>
 </head>
 <body>
     <table border="1">
-     <caption>Clase del 12</caption>
+     <caption>Tablas - Clase del 12</caption>
         <tr> <!-- Empieza la primera fila -->
             
             <th>Basadas en hechos reales</th> <!-- Primera celda de la primera fila -->
@@ -27,7 +27,7 @@
 
         </tr> <!-- Termina la primera fila -->
 
-        <tr> <!--Empieza otra fila -->
+        <tr> <!--Empieza segunda fila -->
             <td>
                 <img src="img/Argentina_1985.jpg" alt="Argentina_1985">
             </td>
@@ -39,10 +39,22 @@
             </td>
         </tr> 
      
-        <tr> <!-- Empieza una fila -->
-            <th>Celda 2</th>
-            <th>Celda 3</th>
-            <th>Celda 4</th>
+        <tr> <!-- Empieza tercera fila -->
+            <th>Deporte</th>
+            <th>Animación</th>
+            <th>Premiadas</th>
+        </tr>
+
+        <tr>
+            <td>
+                <img src="img/elijo-creer.jpg" alt="Elijo creer">
+            </td>
+            <td>
+                <img src="img/Futbolain_Metegol.jpg" alt="Metegol">
+            </td>
+            <td>
+                <img src="img/Relatos_Salvajes.jpg" alt="Relatos salvajes">
+            </td>
         </tr>
 
     </table>
