--- a/index2.html
+++ b/index2.html
@@ -17,7 +17,8 @@
     <title>clase del 12</title>
 </head>
 <body>
-    <table border="1">
+    <!-- table border="1" -->
+    <table>
      <caption>Tablas - Clase del 12</caption>
         <tr> <!-- Empieza la primera fila -->
             
