--- a/index2.html
+++ b/index2.html
@@ -6,38 +6,31 @@
     <link rel="stylesheet" href="estilo.css">
 
     <!-- estilo fuentes linkeadas de google-->
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-
 
     <!-- icono pestaña -->
 
     <link rel="icon" href="img/filmIcon.ico">
     <title>clase del 12</title>
 </head>
+
 <body>
-    <!-- table border="1" -->
+
     <table>
      <caption>Tablas - Clase del 12</caption>
         <tr> <!-- Empieza la primera fila -->
-            
             <th>Basadas en hechos reales</th> <!-- Primera celda de la primera fila -->
             <th>Suspenso</th>
             <th>Comedia</th>
-
         </tr> <!-- Termina la primera fila -->
 
         <tr> <!--Empieza segunda fila -->
-            <td>
-                <img src="img/Argentina_1985.jpg" alt="Argentina_1985">
-            </td>
-            <td>
-                <img src="img/ciudadano-ilsutre.jpg" alt="ciudadano-ilsutre">
-            </td>
-            <td>
-                <img src="img/Dos Hermanos.jpg" alt="Dos Hermanos">
-            </td>
+            <td><img src="img/Argentina_1985.jpg" alt="Argentina_1985"></td>
+            <td><img src="img/ciudadano-ilsutre.jpg" alt="ciudadano-ilsutre"></td>
+            <td><img src="img/Dos Hermanos.jpg" alt="Dos Hermanos"></td>
         </tr> 
      
         <tr> <!-- Empieza tercera fila -->
@@ -47,15 +40,9 @@
         </tr>
 
         <tr>
-            <td>
-                <img src="img/elijo-creer.jpg" alt="Elijo creer">
-            </td>
-            <td>
-                <img src="img/Futbolain_Metegol.jpg" alt="Metegol">
-            </td>
-            <td>
-                <img src="img/Relatos_Salvajes.jpg" alt="Relatos salvajes">
-            </td>
+            <td><img src="img/elijo-creer.jpg" alt="Elijo creer"></td>
+            <td><img src="img/Futbolain_Metegol.jpg" alt="Metegol"></td>
+            <td><img src="img/Relatos_Salvajes.jpg" alt="Relatos salvajes"></td>
         </tr>
 
     </table>
