--- a/index2.html
+++ b/index2.html
@@ -30,7 +30,7 @@
         <tr> <!--Empieza segunda fila -->
             <td><img src="img/Argentina_1985.jpg" alt="Argentina_1985"></td>
             <td><img src="img/ciudadano-ilsutre.jpg" alt="ciudadano-ilsutre"></td>
-            <td><img src="img/Dos Hermanos.jpg" alt="Dos Hermanos"></td>
+            <td><img src="img/Dos_Hermanos.jpg" alt="Dos Hermanos"></td>
         </tr> 
      
         <tr> <!-- Empieza tercera fila -->
